test/message/vm_dont_display_syntax_error.out
beginning
middle
test.vm:1
var 5;
    ^

SyntaxError: Unexpected number
    at new Script (vm.js:*)
    at createScript (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> (*test*message*vm_dont_display_syntax_error.js:*)
    at Module._compile (internal/modules/cjs/loader.js:*)
    at Proxy.extensions..js (internal/modules/cjs/loader.js:*:*)
    at Module.load (internal/modules/cjs/loader.js:*)
    at Function.Module._load (internal/modules/cjs/loader.js:*)
    at Proxy.Module.runMain (internal/modules/cjs/loader.js:*)
    at executeUserCode (internal/bootstrap/node.js:*:*)
